batch-orchestrator/main/batch-job-management/objects/Batch_Job_Log__c/Batch_Job_Log__c.object-meta.xml
<CustomObject>
    <description>Apex Batch Job Log</description>
    <label>Batch Job Log</label>
    <nameField>
        <displayFormat>BJL-{0000000}</displayFormat>
        <label>Batch Job Log No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Batch Job Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>