batch-orchestrator/main/batch-job-management/objects/Batch_Job_Log__c/fields/Async_Apex_Limit__c.field-meta.xml
<CustomField>
    <fullName>Async_Apex_Limit__c</fullName>
    <formula>TEXT(AsyncApexCallsUsed__c) +&apos; / &apos;+ TEXT(AsyncApexCallsLimit__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Async Apex Limit</label>
    <type>Text</type>
</CustomField>