batch-orchestrator/main/batch-job-management/objects/Batch_Job_Log__c/fields/AsyncApexCallsLimit__c.field-meta.xml
<CustomField>
    <fullName>AsyncApexCallsLimit__c</fullName>
    <label>Async Apex Calls Limit</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>