batch-orchestrator/main/batch-job-management/objects/Batch_Job_Log__c/fields/AsyncApexCallsUsed__c.field-meta.xml
<CustomField>
    <fullName>AsyncApexCallsUsed__c</fullName>
    <label>Async Apex Calls Used</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>