batch-orchestrator/main/batch-job-management/objects/Batch_Job_Log__c/fields/Batch_Apex_Job__c.field-meta.xml
<CustomField>
    <fullName>Batch_Apex_Job__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Batch Apex Job</label>
    <referenceTo>Batch_Apex_Job__c</referenceTo>
    <relationshipLabel>All Batch Job Logs</relationshipLabel>
    <relationshipName>Batch_Job_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>