batch-orchestrator/main/batch-job-management/objects/Batch_Job_Log__c/fields/Batch_Job_Name__c.field-meta.xml
<CustomField>
    <fullName>Batch_Job_Name__c</fullName>
    <description>Apex Batch Job class name</description>
    <label>Batch Job Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>