batch-orchestrator/main/batch-job-management/objects/Batch_Job_Log__c/fields/Batch_Job_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Batch_Job_Schedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Batch Job Schedule</label>
    <referenceTo>Batch_Job_Schedule__c</referenceTo>
    <relationshipLabel>All Batch Job Logs</relationshipLabel>
    <relationshipName>Batch_Job_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>