batch-orchestrator/main/batch-job-management/objects/Batch_Job_Log__c/fields/BatchApexJobParent__c.field-meta.xml
<CustomField>
    <fullName>BatchApexJobParent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Batch Apex Job (Parent)</label>
    <referenceTo>Batch_Apex_Job__c</referenceTo>
    <relationshipLabel>Parent Apex Job Logs</relationshipLabel>
    <relationshipName>Batch_Job_Logs1</relationshipName>
    <type>Lookup</type>
</CustomField>