batch-orchestrator/main/batch-job-management/objects/Batch_Job_Log__c/fields/Batches_Processed__c.field-meta.xml
<CustomField>
    <fullName>Batches_Processed__c</fullName>
    <label>Batches Processed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>