batch-orchestrator/main/batch-job-management/objects/Batch_Job_Log__c/fields/BatchJobScheduleParent__c.field-meta.xml
<CustomField>
    <fullName>BatchJobScheduleParent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Batch Job Schedule (Parent)</label>
    <referenceTo>Batch_Job_Schedule__c</referenceTo>
    <relationshipLabel>Batch Job Logs (Batch Job Schedule (Parent))</relationshipLabel>
    <relationshipName>Batch_Job_Logs1</relationshipName>
    <type>Lookup</type>
</CustomField>