batch-orchestrator/main/batch-job-management/objects/Batch_Job_Log__c/fields/Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Completed_Date__c</fullName>
    <description>Batch job completed time</description>
    <label>Completed Date</label>
    <type>DateTime</type>
</CustomField>