batch-orchestrator/main/batch-job-management/objects/Batch_Job_Log__c/fields/Context__c.field-meta.xml
<CustomField>
    <fullName>Context__c</fullName>
    <label>Context</label>
    <length>255</length>
    <type>Text</type>
</CustomField>