batch-orchestrator/main/batch-job-management/objects/Batch_Job_Log__c/fields/CPUTime__c.field-meta.xml
<CustomField>
    <fullName>CPUTime__c</fullName>
    <formula>TEXT(CPUTimeUsed__c) +&apos; / &apos;+ TEXT(CPUTimeLimit__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CPU Time</label>
    <type>Text</type>
</CustomField>