batch-orchestrator/main/batch-job-management/objects/Batch_Job_Log__c/fields/CPUTimeLimit__c.field-meta.xml
<CustomField>
    <fullName>CPUTimeLimit__c</fullName>
    <label>CPU Time Limit</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>