batch-orchestrator/main/batch-job-management/objects/Batch_Job_Log__c/fields/CPUTimeUsed__c.field-meta.xml
<CustomField>
    <fullName>CPUTimeUsed__c</fullName>
    <label>CPU Time Used</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>