batch-orchestrator/main/batch-job-management/objects/Batch_Job_Log__c/fields/DML_Rows__c.field-meta.xml
<CustomField>
    <fullName>DML_Rows__c</fullName>
    <formula>TEXT(DMLRowsUsed__c) +&apos; / &apos;+ TEXT(DMLRowsLimit__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DML Rows</label>
    <type>Text</type>
</CustomField>