batch-orchestrator/main/batch-job-management/objects/Batch_Job_Log__c/fields/DML_Statements__c.field-meta.xml
<CustomField>
    <fullName>DML_Statements__c</fullName>
    <formula>TEXT(DMLStatementsUsed__c) +&apos; / &apos;+ TEXT(DMLStatementsLimit__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DML Statements</label>
    <type>Text</type>
</CustomField>