batch-orchestrator/main/batch-job-management/objects/Batch_Job_Log__c/fields/DMLRowsLimit__c.field-meta.xml
<CustomField>
    <fullName>DMLRowsLimit__c</fullName>
    <label>DML Rows Limit</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>