batch-orchestrator/main/batch-job-management/objects/Batch_Job_Log__c/fields/DMLRowsUsed__c.field-meta.xml
<CustomField>
    <fullName>DMLRowsUsed__c</fullName>
    <label>DML Rows Used</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>