batch-orchestrator/main/batch-job-management/objects/Batch_Job_Log__c/fields/DMLStatementsLimit__c.field-meta.xml
<CustomField>
    <fullName>DMLStatementsLimit__c</fullName>
    <label>DML Statements Limit</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>