batch-orchestrator/main/batch-job-management/objects/Batch_Job_Log__c/fields/DMLStatementsUsed__c.field-meta.xml
<CustomField>
    <fullName>DMLStatementsUsed__c</fullName>
    <label>DML Statements Used</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>