batch-orchestrator/main/batch-job-management/objects/Batch_Job_Log__c/fields/Execution_Result__c.field-meta.xml
<CustomField>
    <fullName>Execution_Result__c</fullName>
    <label>Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>