batch-orchestrator/main/batch-job-management/objects/Batch_Job_Log__c/fields/FailedBatches__c.field-meta.xml
<CustomField>
    <fullName>FailedBatches__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Failed Batches</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>