batch-orchestrator/main/batch-job-management/objects/Batch_Job_Log__c/fields/Number_of_Errors__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Errors__c</fullName>
    <label>Number of Errors</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>