batch-orchestrator/main/batch-job-management/objects/Batch_Job_Log__c/fields/Parent_Log__c.field-meta.xml
<CustomField>
    <fullName>Parent_Log__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Log</label>
    <referenceTo>Batch_Job_Log__c</referenceTo>
    <relationshipLabel>Batch Job Logs</relationshipLabel>
    <relationshipName>Child_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>