batch-orchestrator/main/batch-job-management/objects/Batch_Job_Log__c/fields/Result__c.field-meta.xml
<CustomField>
    <fullName>Result__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Information</fullName>
                <label>ℹ️ Information</label>
            </value>
            <value>
                <fullName>Success</fullName>
                <label>✔️ Success</label>
            </value>
            <value>
                <fullName>Error</fullName>
                <label>⛔ Error</label>
            </value>
            <value>
                <fullName>Failed</fullName>
                <label>⛔ Failed</label>
            </value>
            <value>
                <fullName>Completed</fullName>
                <label>✔️ Completed</label>
            </value>
            <value>
                <fullName>Processing</fullName>
                <label>⏳ Processing</label>
            </value>
            <value>
                <fullName>Completed with Errors</fullName>
                <label>⚠️ Completed with Errors</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>