batch-orchestrator/main/batch-job-management/objects/Batch_Job_Log__c/fields/Scope__c.field-meta.xml
<CustomField>
    <fullName>Scope__c</fullName>
    <label>Scope</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>