batch-orchestrator/main/batch-job-management/objects/Batch_Job_Log__c/fields/SOQL_Queries__c.field-meta.xml
<CustomField>
    <fullName>SOQL_Queries__c</fullName>
    <formula>TEXT(SOQLQueriesUsed__c) +&apos; / &apos;+ TEXT(SOQLQueriesLimit__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SOQL Queries</label>
    <type>Text</type>
</CustomField>