batch-orchestrator/main/batch-job-management/objects/Batch_Job_Log__c/fields/SOQL_Rows__c.field-meta.xml
<CustomField>
    <fullName>SOQL_Rows__c</fullName>
    <formula>TEXT(SOQLRowsUsed__c) +&apos; / &apos;+ TEXT(SOQLRowsLimit__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SOQL Rows</label>
    <type>Text</type>
</CustomField>