batch-orchestrator/main/batch-job-management/objects/Batch_Job_Log__c/fields/SOQLQueriesLimit__c.field-meta.xml
<CustomField>
    <fullName>SOQLQueriesLimit__c</fullName>
    <label>SOQL Queries Limit</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>