batch-orchestrator/main/batch-job-management/objects/Batch_Job_Log__c/fields/SOQLRowsLimit__c.field-meta.xml
<CustomField>
    <fullName>SOQLRowsLimit__c</fullName>
    <label>SOQL Rows Limit</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>