batch-orchestrator/main/batch-job-management/objects/Batch_Job_Log__c/fields/SOQLRowsUsed__c.field-meta.xml
<CustomField>
    <fullName>SOQLRowsUsed__c</fullName>
    <label>SOQL Rows Used</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>