batch-orchestrator/main/batch-job-management/objects/Batch_Job_Log__c/fields/StatusFm__c.field-meta.xml
<CustomField>
    <fullName>StatusFm__c</fullName>
    <formula>IF(Batch_Apex_Job__r.RecordType.DeveloperName == 'Queueable', IF(Status__c == 'Completed', '✅ Success', '🚫 Error'),
IF(Number_of_Errors__c == 0,'✅ Success','🚫 Error'))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>