batch-orchestrator/main/batch-job-management/objects/Batch_Job_Log__c/fields/SuccessfulBatches__c.field-meta.xml
<CustomField>
    <fullName>SuccessfulBatches__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Successful Batches</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>