batch-orchestrator/main/batch-job-management/objects/Batch_Job_Log__c/recordTypes/Batch_Child_Log.recordType-meta.xml
<RecordType>
    <fullName>Batch_Child_Log</fullName>
    <active>true</active>
    <label>Batch Child Log</label>
</RecordType>