batch-orchestrator/main/batch-job-management/objects/Batch_Job_Log__c/recordTypes/Batch_Parent_Log.recordType-meta.xml
<RecordType>
    <fullName>Batch_Parent_Log</fullName>
    <active>true</active>
    <label>Batch Parent Log</label>
</RecordType>