batch-orchestrator/main/batch-job-management/objects/Batch_Job_Log__c/recordTypes/Legacy_Log.recordType-meta.xml
<RecordType>
    <fullName>Legacy_Log</fullName>
    <active>true</active>
    <label>Legacy Log</label>
</RecordType>