batch-orchestrator/main/batch-job-management/objects/Batch_Job_Log__c/recordTypes/Queueable_Log.recordType-meta.xml
<RecordType>
    <fullName>Queueable_Log</fullName>
    <active>true</active>
    <label>Queueable Log</label>
</RecordType>