batch-orchestrator/main/batch-job-management/objects/Batch_Job_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Batch_Job_Name__c</columns>
    <columns>Completed_Date__c</columns>
    <columns>StatusFm__c</columns>
    <columns>Number_of_Errors__c</columns>
    <columns>Batches_Processed__c</columns>
    <columns>Execution_Result__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>